--- a/app/src/main/resources/templates/createRecipe.html
+++ b/app/src/main/resources/templates/createRecipe.html
@@ -93,7 +93,7 @@
 </div></div>
 <div class="container mx-auto p-4">
     <h1 class="text-3xl font-bold mb-4">Create a New Post</h1>
-    <form th:action="@{/posts}" th:method="POST" th:object="${createRecipe}">
+    <form th:action="@{/posts/new}" th:method="POST" th:object="${createRecipe}">
         <h3>Add post</h3>
         <div class="form-group">
             <div class= "label-holder justify-content-center text-gray-600 font-semibold mb-2">
