--- a/app/src/main/resources/templates/home.html
+++ b/app/src/main/resources/templates/home.html
@@ -13,10 +13,6 @@
 <header>
     <nav class="navbar">
         <a class="logo">Morsel</a>
-        <div class="search-bar">
-            <input type="text" placeholder="Search..." />
-            <button>Search</button>
-        </div>
     </nav>
 </header>
 <div class="nav-bar"><div class="side-bar-container">
@@ -53,7 +49,7 @@
                             </a>
 
                             <!-- Followers/Following -->
-                            <a href="/followers" class="flex items-center space-x-2">
+                            <a href="/friendships/pending" class="flex items-center space-x-2">
                                 <p>Followers / Following</p>
                                 <svg class="w-6 h-6 text-gray-800 dark:text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M5 21v-4a4 4 0 1 1 8 0v4m4 0v-4a4 4 0 1 1 8 0v4M9 7a4 4 0 1 1 8 0 4 4 0 0 1-8 0z"></path>
