--- a/app/src/main/resources/templates/friendship-pending.html
+++ b/app/src/main/resources/templates/friendship-pending.html
@@ -141,7 +141,9 @@
     <!-- No Invitations Message -->
     <div th:if="${#lists.isEmpty(invitations)}" class="text-center mt-4">
         <p class="text-muted">You have no pending friendship invitations.</p>
-        <p class="text-muted">Send invitations to connect with new friends.</p>
+        <div class="text-invites">
+            <p class="send-invites-text">Send invitations to connect with new friends.</p>
+        </div>
     </div>
 </div>
 </body>
