Fixing Front-End

--- a/app/src/main/resources/static/css/friendship.css
+++ b/app/src/main/resources/static/css/friendship.css
@@ -11,7 +11,7 @@
     --primary-light: #fbcfe8;
     --secondary: #48dbfb;
     --secondary-dark: #0abde3;
-    --text-dark: #2d3436;
+    --text-dark: #ffffff;
     --text-light: #636e72;
     --background: #f9f9f9;
     --white: #ffffff;
