--- a/app/src/main/resources/templates/bookmarks.html
+++ b/app/src/main/resources/templates/bookmarks.html
@@ -9,7 +9,7 @@
 
 <header>
     <nav class="navbar">
-        <a href="/home" class="logo">Morsel</a>
+        <a class="logo">Morsel</a>
     </nav>
 </header>
 <div class="nav-bar"><div class="side-bar-container">
