--- a/app/src/main/resources/templates/createPost.html
+++ b/app/src/main/resources/templates/createPost.html
@@ -9,8 +9,7 @@
 <body>
 <header>
     <nav class="navbar">
-        <div class="app-nav-bar-name">Morsel</div>
-        <div class="app-nav-bar-version">v1.0.0</div>
+        <a class="logo">Morsel</a>
     </nav>
 </header>
 <div class="nav-bar"><div class="side-bar-container">
@@ -20,6 +19,10 @@
                 <div class="side-bar-container">
                     <div class="side_navbar">
                         <!-- App Name -->
+                        <div class="app-nav-bar">
+                            <div class="app-nav-bar-name">Morsel</div>
+                            <div class="app-nav-bar-version">v1.0.0</div>
+                        </div>
                         <div class="func-block">
                                 <a class="home" href="/home">
                                     <p>Home</p>
@@ -92,9 +95,9 @@
     </nav>
 </div></div>
 <div class="container mx-auto p-4">
-    <h1 class="text-3xl font-bold mb-4">Create a New Post</h1>
+
     <form th:action="@{/posts/new}" th:method="POST" th:object="${createRecipe}">
-        <h3>Add post</h3>
+        <h1 class="text-3xl font-bold mb-4">Create a New Post</h1>
         <div class="form-group">
             <div class= "label-holder justify-content-center text-gray-600 font-semibold mb-2">
                 <label for="title" class="h3 mb-2">Title</label>
@@ -118,11 +121,12 @@
                     <p th:if="${#fields.hasErrors('categoryType')}" th:errors="*{categoryType}" class="text-warning"></p>
                 </select>
             </div>
+            <div class="form-group">
+                <label for="image" class="block text-gray-600 font-semibold mb-2">Upload Image</label>
+                <input type="file" id="image" name="image" accept="image/*" th:field="*{imageFile}" class="block w-full text-gray-600 border p-2 rounded">
+            </div>
         </form>
-        <div class="form-group">
-            <label for="image" class="block text-gray-600 font-semibold mb-2">Upload Image</label>
-            <input type="file" id="image" name="image" accept="image/*" th:field="*{imageFile}" class="block w-full text-gray-600 border p-2 rounded">
-        </div>
+
 
         <div class="button-holder d-flex justify-content-center">
             <button type="submit" class="btn btn-info  mb-3">Create post</button>
