--- a/app/src/main/resources/templates/access-denied.html
+++ b/app/src/main/resources/templates/access-denied.html
@@ -6,13 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&amp;display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="/css/common.css">
-    <link rel="stylesheet" type="text/css" href="/css/nav-side-bar.css">
-    <link rel="stylesheet" type="text/css" href="/css/home-common.css">
-    <link rel="stylesheet" type="text/css" href="/css/home.css">
-    <link rel="stylesheet" type="text/css" href="/css/profile-menu.css">
-    <link rel="stylesheet" type="text/css" href="/css/upgrade-result-menu.css">
-    <link rel="stylesheet" type="text/css" href="/css/error-page.css">
+    <link rel="stylesheet" th:href="@{/css/access-denied.css}">
     <title>Access Denied</title>
 </head>
 <body>
